# WDMexample

./: .gitignore  cORcpp.sln
ApiTest/: ApiTest.vcxproj  ApiTest.vcxproj.filters  AppHeader.h  Global.cpp  Global.h  OsApi.h  OsApi_Linux.cpp  OsApi_Win32.cpp  main.cpp
AssembleDemo/: AssembleDemo.vcxproj  AssembleDemo.vcxproj.filters  LdrRegisterDllNotification.h  MessageBox.cpp  main.c  main.cpp  main.s
Common/: CommunicateData.h  KBobMap.c  KBobMap.h  ThreadPool.hpp  flog.h
DllDemo/: DllDemo.aps  DllDemo.def  DllDemo.vcxproj  DllDemo.vcxproj.filters  dllmain.cpp  pch.h
ELFParse/: ELFParse.cpp  ELFParse.vcxproj  elf_struct.h  main.cpp
KernelDemo/: KernelDemo.inf  KernelDemo.vcxproj  KernelDemo.vcxproj.filters  LogMgr.c  LogMgr.h  ProcessNotify.c  ProcessNotify.h  main.c
OutputLog/: OutputLog.cpp  OutputLog.vcxproj  OutputLog.vcxproj.filters  log.h
PEParse/: PE32.c  PE32.h  PE64.c  PE64.h  PEFileParse.c  PEFileParse.h  PEParse.vcxproj  PEParse.vcxproj.filters  main.c  pch.h
ServiceProgramTask/: ServiceProgramTask.vcxproj  main.cpp
Socket/: Socket.vcxproj  Socket.vcxproj.filters  cleint.hpp  main.cpp  server.hpp
Socket/grpcImp/: CMakeLists.txt  async_client.cpp  client.cpp  client.h  client_async.cpp  client_async2.cpp  grpc_base_service.h  server.cpp  server.h  server_async.cpp  work_thread.h
Socket/grpcImp/cmake-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client.vcxproj  client.vcxproj.filters  client_async.vcxproj  client_async.vcxproj.filters  client_async2.vcxproj  client_async2.vcxproj.filters  cmake_install.cmake  grpc_demo.vcxproj  grpc_demo.vcxproj.filters  grpc_example.sln  server.vcxproj  server.vcxproj.filters  server_async.vcxproj  server_async.vcxproj.filters
Socket/pocoImp/src/: IpcMgr.cpp  IpcMgr.h  WorkThread.cpp  WorkThread.h  tcp_client.cpp  tcp_server.cpp
Socket/proto/: base.grpc.pb.cc  base.grpc.pb.h  base.pb.cc  base.pb.h  base.proto  helloworld.grpc.pb.h
SysDemo/: SysDemo.vcxproj
api_template/: Api_Win.c  inject.c
cpp_learn/: BaseClass.cpp  BaseClass.h  baseClass.s  cpp_learn.vcxproj  cpp_learn.vcxproj.filters  decltype.cpp  main.cpp  main.s
cpp_learn/stl/: auto_ptr.cpp  auto_ptr.h  template.cpp  template.h
cpp_learn/template/: safe_map.h
detours_hook_dll/: api_hook.cpp  api_hook.h  detours.lib  detours_hook_dll.def  detours_hook_dll.vcxproj  detours_hook_dll.vcxproj.filters  detoursx86.lib  dllmain.cpp  hook_proc.cpp  hook_proc.h
ez_grpc/: ez_grpc.vcxproj  ez_grpc.vcxproj.filters
ez_grpc/src/: main.cpp
ez_grpc/src/common/: subscriber.cpp  subscriber.h
ez_grpc/src/grpc_client/: client.cpp  client.h  client_connect_internal.cpp  client_connect_internal.h
ez_grpc/src/grpc_server/: server.cpp  server.h  server_connect.cpp  server_connect.h  service.cpp  service.h  stream_server.cpp  stream_server.h  stream_service.cpp  stream_service.h
ez_grpc/src/proto/: base.grpc.pb.cc
grpc_test/src/: main.cpp
grpc_test/src/grpc_client/: client.cpp  client.h
grpc_test/src/grpc_server/: basic_service.cpp  basic_service.h  server.cpp  server.h
grpc_test/src/proto/: base.pb.h
low_level_inject/: dllmain.c  entry.asm  low_level_inject.c  low_level_inject.def  low_level_inject.h  low_level_inject.vcxproj  low_level_inject.vcxproj.filters  main.c
low_level_inject_exe/: Resource.aps  SetWindowsHook.c  SetWindowsHook.h  low_level_inject_exe.aps  low_level_inject_exe.vcxproj  low_level_inject_exe.vcxproj.filters  main.c  main.cpp
myutils/: utils.sln
myutils/boost_ipc/: boost_ipc.vcxproj
myutils/ez_grpc/: ez_grpc.aps  ez_grpc.vcxproj  ez_grpc.vcxproj.filters  main.cpp  resource.h
myutils/ez_grpc/common/: flog.h
myutils/ez_grpc/grpc_client/: client.cpp  client.h  client_connect_base.cpp  client_connect_base.h  client_connect_internal.h  client_connect_write_stream.cpp  client_connect_write_stream.h
myutils/ez_ipc/: ez_ipc.vcxproj
myutils/ez_log/: ez_log.vcxproj  ez_log.vcxproj.filters
myutils/ez_map/: ez_map.vcxproj  ez_map.vcxproj.filters
myutils/ez_msg_queue/: ez_msg_queue.cpp  ez_msg_queue.vcxproj  ez_msg_queue.vcxproj.filters
myutils/ez_queue/: ez_queue.cpp  ez_queue.vcxproj  ez_queue.vcxproj.filters
myutils/ez_rwlock/: ez_rwlock.vcxproj  ez_rwlock.vcxproj.filters  rwlock.cpp
myutils/ez_shared_memory/: ez_shared_memory.cpp  ez_shared_memory.vcxproj  ez_shared_memory.vcxproj.filters
myutils/ez_test/: ez_test.vcxproj  ez_test.vcxproj.filters  main.cpp
myutils/ez_thread_pool/: ez_thread_pool.cpp  thread_pool.vcxproj  thread_pool.vcxproj.filters
sys_monitor/: sys_monitor.inf  sys_monitor.vcxproj  sys_monitor.vcxproj.filters
windows_hook_exe/: windows_hook_exe.vcxproj
(+51 files in other folders)
